--- a/client/js/require.config.json
+++ b/client/js/require.config.json
@@ -5,7 +5,7 @@
 , "paths" 		: {
 	  "jquery" 		: "//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min"
 	, "jqueryui"    : "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/jquery-ui.min" 
-	, "underscore"	: "/vendors/underscore-1.2.1"
-  	, "backbone"	: "/vendors/backbone-0.5.3"
+	, "underscore"	: "vendors/underscore-1.2.1"
+  	, "backbone"	: "vendors/backbone-0.5.3"
 	}
 }
